[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Enemies/Humans/Bullets/HumanSniperBlast.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Human Sniper/HumanSniperBulletInner.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Human Sniper/HumanSniperBulletOuter.png" type="Texture" id=3]
[ext_resource path="res://Entities/Shared/Bullets/BlastTrailParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Shared/Bullets/BlastDeathParticles.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.87779
height = 4.43295

[node name="Bullet" type="Area2D"]
gravity = 0.0
linear_damp = 0.0
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2( 0.01, 0.01 )

[node name="BulletInner" type="Sprite" parent="Sprites"]
texture = ExtResource( 2 )

[node name="BulletOuter" type="Sprite" parent="Sprites"]
texture = ExtResource( 3 )

[node name="BulletColliderShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
one_shot = true

[node name="ParticleTrail" parent="." instance=ExtResource( 4 )]
rotation = 1.5708
amount = 1

[node name="DeathNodes" type="Node2D" parent="."]

[node name="BlastDeathParticles" parent="DeathNodes" instance=ExtResource( 5 )]

[node name="WaitAfterDeath" type="Timer" parent="DeathNodes"]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="DeathNodes/WaitAfterDeath" to="." method="_on_WaitAfterDeath_timeout"]
